; ModuleID = '/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson04/2/rs/src/extr_mm.c_get_free_page.c'
source_filename = "/home/carl/AnghaBench/raspberry-pi-os/exercises/lesson04/2/rs/src/extr_mm.c_get_free_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGING_PAGES = common dso_local global i32 0, align 4
@mem_map = common dso_local global i32* null, align 8
@LOW_MEMORY = common dso_local global i64 0, align 8
@PAGE_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_free_page() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  br label %3

3:                                                ; preds = %26, %0
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @PAGING_PAGES, align 4
  %6 = icmp slt i32 %4, %5
  br i1 %6, label %7, label %29

7:                                                ; preds = %3
  %8 = load i32*, i32** @mem_map, align 8
  %9 = load i32, i32* %2, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i32, i32* %8, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %25

14:                                               ; preds = %7
  %15 = load i32*, i32** @mem_map, align 8
  %16 = load i32, i32* %2, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  store i32 1, i32* %18, align 4
  %19 = load i64, i64* @LOW_MEMORY, align 8
  %20 = load i32, i32* %2, align 4
  %21 = load i32, i32* @PAGE_SIZE, align 4
  %22 = mul nsw i32 %20, %21
  %23 = sext i32 %22 to i64
  %24 = add i64 %19, %23
  store i64 %24, i64* %1, align 8
  br label %30

25:                                               ; preds = %7
  br label %26

26:                                               ; preds = %25
  %27 = load i32, i32* %2, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %2, align 4
  br label %3

29:                                               ; preds = %3
  store i64 0, i64* %1, align 8
  br label %30

30:                                               ; preds = %29, %14
  %31 = load i64, i64* %1, align 8
  ret i64 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
